--- a/index.html
+++ b/index.html
@@ -117,14 +117,14 @@
       // var lpTag = {};
        //lpTag.identities = [];
       
-    //  lpTag.identities.push(identityFn);
-    //  function identityFn(callback) {
-     //   callback({
-     //     "sub": "+972-3-5555-550",
-      //    "iss": "https://jwt.io/",
-       //   "acr": "loa1"
-      //});
-    //}
+      lpTag.identities.push(identityFn);
+      function identityFn(callback) {
+        callback({
+          "sub": "+972-3-5555-550",
+          "iss": "https://jwt.io/",
+          "acr": "loa1"
+      });
+    }
 
     var id_token = "eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJWaXNoYWxfODI1ODE4IiwiaXNzIjoiaHR0cHM6Ly9qd3QuaW8vIiwiYXVkIjoiYWNjOnFhNTcyMjE2NzYiLCJleHAiOjE5OTIwMjU5OTIsImlhdCI6MTY4MjAzMDk1NCwiYWNyIjoibG9hMSJ9.sIgXrJW4THO1fcsi36N8bN3BEfwHx8rCG4RnOYFHTLHJGLb9k3g2ZblDsE52xLTIQIJ4clwnT_Mu3tGmpJqm7e3CQa9KmQaTDfei8J4iMht4bw2cqyDr9HI6qWIsf_ujioDqosddySNdxtkwSX5fU8zwlImyMY6GwDZOkqUkhje8iZKIwG53Ugg9jbHqsOQrot0wH1uYHg1c4v0YWoBX3Iy9llYp3i3NdbmA0UuRk0CCEJ5nLnV1QSD9wgyNfxsaQnYVS--rubf9e9Yd70-S7-1ACmGtgFoFQhbiIzoQHdyw2zINKu7KYoaDXxsjmGDbPQ_9HnmDg_pNHarVryjzJg"
     
