--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       lpTag.identities.push(identityFn);
       function identityFn(callback) {
         callback({
-          "sub": "+972-3-5555-550",
+          "sub": "Vishal_825818",
           "iss": "https://jwt.io/",
           "acr": "loa1"
       });
