--- a/index.html
+++ b/index.html
@@ -120,8 +120,10 @@
       lpTag.identities.push(identityFn);
       function identityFn(callback) {
         callback({
-          "sub": "0123456789",
           "iss": "https://jwt.io/",
+          "aud":"acc:qa57221676",
+          "exp": 1992025992,
+          "iat": 1682030954,
           "acr": "loa1"
       });
     }
