--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   
 </script>
 
+<script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
 
     <!-- GetButton.io widget -->
 <!-- <script type="text/javascript">
