--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- Nav -->
     <div class="nav container">
       <a href="#" class="logo">TalkTalk Business</a>
-      <button id="login">Login</button>
+      <button id="login" onclick=loginWithRedirect();>Login</button>
       <div id="id01" class="modal">
 
 <!--      <p>Select a type of broadband from the list.</p> -->
