--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
     <div class="nav container">
       <a href="#" class="logo">TalkTalk Business</a>
       <button id="login" onclick=loginWithRedirect();>Login</button>
+      <button id="logout" onclick=logout();>Logout</button>
+      <button id="profile" onclick=getUser();>Profile</button>
       <div id="id01" class="modal">
 
 <!--      <p>Select a type of broadband from the list.</p> -->
