--- a/index.html
+++ b/index.html
@@ -93,13 +93,6 @@
               auth0Client.loginWithRedirect();
             });
             
-            auth0.getIdTokenClaims({
-            domain: "dev-zg12zsbw.us.auth0.com",
-            clientId: "QmVsv9NRr1DGo5he4athPzVKBfu8EQgA",
-            authorizationParams: {
-              redirect_uri: window.location.origin
-            }
-          })
 
             if (location.search.includes("state=") && 
                 (location.search.includes("code=") || 
@@ -118,7 +111,7 @@
 
             const isAuthenticated = await auth0Client.isAuthenticated();
             const userProfile = await auth0Client.getUser();
-            const claims = await auth0.getIdTokenClaims();
+            const claims = await auth0Client.getIdTokenClaims();
             console.log(claims);
 
 
