--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       function identityFn(callback) {
         callback({
           "sub": "+972-3-5555-555",
-          "iss": "https://jwt.io/",
+          "iss": "https://dev-zg12zsbw.us.auth0.com/",
           "aud":"acc:qa57221676",
           "exp": 1992025992,
           "iat": 1682030954,
