--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                   console.log("LP asked for id_token or auth code in Code Flow");
                   // Do your magic…
                   // On Success
-                  callback(idToken);
+                  callback(id_token);
                   // On Failure
                   callback("", "error reason");
               }
