--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     //   // Initialize the lpTag namespace and the identity array, if the identity function is placed above the tag.
       // var lpTag = {};
        //lpTag.identities = [];
-      globalFunction();
+      //globalFunction();
       console.log(Arrayz[0]);
       lpTag.identities.push(identityFn);
       function identityFn(callback) {
