--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             // On Failure
             callback("", "error reason");
         }
-      sessionStorage.removeItem("id_token");
+      //sessionStorage.removeItem("id_token");
 
 
 
